--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -1,33 +1,43 @@
-name: Hourly AgOnline scrape + email
+name: AgOnline hourly scrape
 
 on:
-  schedule:
-    - cron: "0 * * * *"   # every hour (UTC)
   workflow_dispatch:
+  schedule:
+    - cron: "0 * * * *"   # every hour
 
 jobs:
-  run:
+  scrape:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Python + Playwright deps
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install pandas openpyxl playwright
           playwright install --with-deps chromium
 
-      - name: Run scraper and send mail
+      - name: Run scraper + email
         env:
           EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-          EMAIL_TO: dunderhenlin@gmail.com
-        run: python send_mail.py
+          EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        run: |
+          python send_mail.py
+
+      - name: Upload output artifact (backup)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: agonline-output
+          path: |
+            master-Raw.xlsx
+          if-no-files-found: warn
